# pumpkinplus

./: .editorconfig  ARCHITECTURE.md  CLAUDE.md  Cargo.toml  GUIDE.md  README.md  SECURITY.md
.github/workflows/: build_app.yml  build_test_release.yml  docs.yml  enforce_branch.yml  plugin.yml  rust.yml
docs/modules/: player.md
src/: config.rs  lib.rs  utils.rs
src/modules/: module.rs  motd.rs  player.rs
src/modules/enchantments/: sample.rs
src/modules/mechanics/: double_doors.rs  locator.rs  motd.rs  player.rs  tablist.rs
